- Modified: Wider autocomplete container + z-index to avoid IE bug
git-svn-id: http://svn.ez.no/svn/extensions/ezfind/ezp4/trunk@4670 49f50cf4-cce6-0310-bc1e-a21d999f3d8f

--- a/design/standard/stylesheets/ezajax_autocomplete.css
+++ b/design/standard/stylesheets/ezajax_autocomplete.css
@@ -2,6 +2,10 @@ div#searchbox {
     text-align:left;
 }
 
+div#ezautocomplete {
+    z-index: 1000;
+}
+
 div#header .yui-ac-content li {
     margin: 0;
     padding: 2px 5px;
